<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_image"
        android:icon="@drawable/ic_baseline_image_24"
        android:title="@string/image"
        android:contentDescription="@string/content_description_image"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_subtitle"
        android:icon="@drawable/ic_baseline_subtitles_24"
        android:title="@string/subtitles"
        android:contentDescription="@string/content_description_subtitles"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sign_out"
        android:title="@string/sign_out"
        android:contentDescription="@string/content_description_sign_out"
        app:showAsAction="never" />

</menu>
